--- a/pronunciation-practice/index.html
+++ b/pronunciation-practice/index.html
@@ -10,13 +10,17 @@
     <main class="app">
       <section id="start-screen" class="screen start-screen">
         <h1 class="title">Super Sound Safari</h1>
-        <p class="subtitle">Say each instrument name, unlock fun facts, and earn points.</p>
+        <p class="subtitle">Choose one instrument family, then complete that challenge.</p>
         <div class="start-badges" aria-hidden="true">
-          <span>Music Mission</span>
-          <span>20 Instruments</span>
+          <span>Pick a Family</span>
           <span>Voice + Choices</span>
         </div>
-        <button id="launch-button" class="primary-button" type="button">Start Adventure</button>
+        <div class="family-grid">
+          <button class="family-button" type="button" data-family="Brass">Brass</button>
+          <button class="family-button" type="button" data-family="Woodwind">Woodwind</button>
+          <button class="family-button" type="button" data-family="Strings">Strings</button>
+          <button class="family-button" type="button" data-family="Percussion">Percussion</button>
+        </div>
       </section>
 
       <section id="game-screen" class="screen" hidden>
@@ -48,7 +52,7 @@
         <h2>Great Work!</h2>
         <p id="final-summary" class="final-summary">You scored 0 points.</p>
         <p class="score-note">Scoring: 2 points first try, 1 point second try, 0 points after multiple choice.</p>
-        <button id="restart-button" class="primary-button" type="button">Play Again</button>
+        <button id="restart-button" class="primary-button" type="button">Choose Another Family</button>
       </section>
     </main>
 
